fix: deleted temp files when model is training and added new state

--- a/src/NNTraining.Contracts/Resources/EnumDescriptionResources.en.resx
+++ b/src/NNTraining.Contracts/Resources/EnumDescriptionResources.en.resx
@@ -47,4 +47,7 @@
     <data name="Deleted" xml:space="preserve">
         <value>Deleted</value>
     </data>
+    <data name="ErrorOfTrainingModel" xml:space="preserve">
+        <value>Error of training the model</value>
+    </data>
 </root>
